--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8
         </project.reporting.outputEncoding>
-        <!--
-		TODO collaboration-engine 3.2.2 contains the fix for
-		CollaborationAvatarGroup in dialog issue.
-		The overridden dependency can be removed after
-		updating to 21.0.3+.
-        -->
-        <vaadin.version>21.0.2</vaadin.version>
+        <vaadin.version>22.0.0.beta3</vaadin.version>
     </properties>
 
     <parent>
@@ -101,15 +95,6 @@
             <artifactId>a-vaadin-helper</artifactId>
             <version>1.6.0</version>
         </dependency>
-        <!--
-            TODO: Remove this dependency.
-        -->
-        <dependency>
-            <groupId>com.vaadin</groupId>
-            <artifactId>collaboration-engine</artifactId>
-            <version>3.2.2</version>
-        </dependency>
-        <!-- TODO: should this be deleted? It is not in newer starters. -->
         <dependency>
             <groupId>org.vaadin.artur.exampledata</groupId>
             <artifactId>exampledata</artifactId>
