--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8
         </project.reporting.outputEncoding>
-        <vaadin.version>22.0.0.beta3</vaadin.version>
+        <vaadin.version>22.0.0.beta2</vaadin.version>
     </properties>
 
     <parent>
@@ -89,6 +89,10 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>collaboration-engine</artifactId>
         </dependency>
         <dependency>
             <groupId>org.vaadin.artur</groupId>
