--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,11 @@
     <packaging>jar</packaging>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8
         </project.reporting.outputEncoding>
-        <vaadin.version>22.0.0.rc1</vaadin.version>
+        <vaadin.version>23.0.0</vaadin.version>
     </properties>
 
     <parent>
