--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8
         </project.reporting.outputEncoding>
-        <vaadin.version>24.1.4</vaadin.version>
+        <vaadin.version>24.2.0.alpha5</vaadin.version>
     </properties>
 
     <parent>
