--- a/package.json
+++ b/package.json
@@ -3,94 +3,94 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@vaadin/a11y-base": "24.2.0-alpha7",
-    "@vaadin/accordion": "24.2.0-alpha7",
-    "@vaadin/app-layout": "24.2.0-alpha7",
-    "@vaadin/avatar": "24.2.0-alpha7",
-    "@vaadin/avatar-group": "24.2.0-alpha7",
-    "@vaadin/board": "24.2.0-alpha7",
-    "@vaadin/bundles": "24.2.0-alpha7",
-    "@vaadin/button": "24.2.0-alpha7",
-    "@vaadin/charts": "24.2.0-alpha7",
-    "@vaadin/checkbox": "24.2.0-alpha7",
-    "@vaadin/checkbox-group": "24.2.0-alpha7",
-    "@vaadin/combo-box": "24.2.0-alpha7",
+    "@vaadin/a11y-base": "24.2.1",
+    "@vaadin/accordion": "24.2.1",
+    "@vaadin/app-layout": "24.2.1",
+    "@vaadin/avatar": "24.2.1",
+    "@vaadin/avatar-group": "24.2.1",
+    "@vaadin/board": "24.2.1",
+    "@vaadin/bundles": "24.2.1",
+    "@vaadin/button": "24.2.1",
+    "@vaadin/charts": "24.2.1",
+    "@vaadin/checkbox": "24.2.1",
+    "@vaadin/checkbox-group": "24.2.1",
+    "@vaadin/combo-box": "24.2.1",
     "@vaadin/common-frontend": "0.0.18",
-    "@vaadin/component-base": "24.2.0-alpha7",
-    "@vaadin/confirm-dialog": "24.2.0-alpha7",
-    "@vaadin/context-menu": "24.2.0-alpha7",
-    "@vaadin/cookie-consent": "24.2.0-alpha7",
-    "@vaadin/crud": "24.2.0-alpha7",
-    "@vaadin/custom-field": "24.2.0-alpha7",
-    "@vaadin/date-picker": "24.2.0-alpha7",
-    "@vaadin/date-time-picker": "24.2.0-alpha7",
-    "@vaadin/details": "24.2.0-alpha7",
-    "@vaadin/dialog": "24.2.0-alpha7",
-    "@vaadin/email-field": "24.2.0-alpha7",
-    "@vaadin/field-base": "24.2.0-alpha7",
-    "@vaadin/field-highlighter": "24.2.0-alpha7",
-    "@vaadin/form-layout": "24.2.0-alpha7",
-    "@vaadin/grid": "24.2.0-alpha7",
-    "@vaadin/grid-pro": "24.2.0-alpha7",
-    "@vaadin/horizontal-layout": "24.2.0-alpha7",
-    "@vaadin/icon": "24.2.0-alpha7",
-    "@vaadin/icons": "24.2.0-alpha7",
-    "@vaadin/input-container": "24.2.0-alpha7",
-    "@vaadin/integer-field": "24.2.0-alpha7",
-    "@vaadin/item": "24.2.0-alpha7",
-    "@vaadin/list-box": "24.2.0-alpha7",
-    "@vaadin/lit-renderer": "24.2.0-alpha7",
-    "@vaadin/login": "24.2.0-alpha7",
-    "@vaadin/map": "24.2.0-alpha7",
-    "@vaadin/menu-bar": "24.2.0-alpha7",
-    "@vaadin/message-input": "24.2.0-alpha7",
-    "@vaadin/message-list": "24.2.0-alpha7",
-    "@vaadin/multi-select-combo-box": "24.2.0-alpha7",
-    "@vaadin/notification": "24.2.0-alpha7",
-    "@vaadin/number-field": "24.2.0-alpha7",
-    "@vaadin/overlay": "24.2.0-alpha7",
-    "@vaadin/password-field": "24.2.0-alpha7",
-    "@vaadin/polymer-legacy-adapter": "24.2.0-alpha7",
-    "@vaadin/progress-bar": "24.2.0-alpha7",
-    "@vaadin/radio-group": "24.2.0-alpha7",
-    "@vaadin/rich-text-editor": "24.2.0-alpha7",
+    "@vaadin/component-base": "24.2.1",
+    "@vaadin/confirm-dialog": "24.2.1",
+    "@vaadin/context-menu": "24.2.1",
+    "@vaadin/cookie-consent": "24.2.1",
+    "@vaadin/crud": "24.2.1",
+    "@vaadin/custom-field": "24.2.1",
+    "@vaadin/date-picker": "24.2.1",
+    "@vaadin/date-time-picker": "24.2.1",
+    "@vaadin/details": "24.2.1",
+    "@vaadin/dialog": "24.2.1",
+    "@vaadin/email-field": "24.2.1",
+    "@vaadin/field-base": "24.2.1",
+    "@vaadin/field-highlighter": "24.2.1",
+    "@vaadin/form-layout": "24.2.1",
+    "@vaadin/grid": "24.2.1",
+    "@vaadin/grid-pro": "24.2.1",
+    "@vaadin/horizontal-layout": "24.2.1",
+    "@vaadin/icon": "24.2.1",
+    "@vaadin/icons": "24.2.1",
+    "@vaadin/input-container": "24.2.1",
+    "@vaadin/integer-field": "24.2.1",
+    "@vaadin/item": "24.2.1",
+    "@vaadin/list-box": "24.2.1",
+    "@vaadin/lit-renderer": "24.2.1",
+    "@vaadin/login": "24.2.1",
+    "@vaadin/map": "24.2.1",
+    "@vaadin/menu-bar": "24.2.1",
+    "@vaadin/message-input": "24.2.1",
+    "@vaadin/message-list": "24.2.1",
+    "@vaadin/multi-select-combo-box": "24.2.1",
+    "@vaadin/notification": "24.2.1",
+    "@vaadin/number-field": "24.2.1",
+    "@vaadin/overlay": "24.2.1",
+    "@vaadin/password-field": "24.2.1",
+    "@vaadin/polymer-legacy-adapter": "24.2.1",
+    "@vaadin/progress-bar": "24.2.1",
+    "@vaadin/radio-group": "24.2.1",
+    "@vaadin/rich-text-editor": "24.2.1",
     "@vaadin/router": "1.7.5",
-    "@vaadin/scroller": "24.2.0-alpha7",
-    "@vaadin/select": "24.2.0-alpha7",
-    "@vaadin/side-nav": "24.2.0-alpha7",
-    "@vaadin/split-layout": "24.2.0-alpha7",
-    "@vaadin/tabs": "24.2.0-alpha7",
-    "@vaadin/tabsheet": "24.2.0-alpha7",
-    "@vaadin/text-area": "24.2.0-alpha7",
-    "@vaadin/text-field": "24.2.0-alpha7",
-    "@vaadin/time-picker": "24.2.0-alpha7",
-    "@vaadin/tooltip": "24.2.0-alpha7",
-    "@vaadin/upload": "24.2.0-alpha7",
+    "@vaadin/scroller": "24.2.1",
+    "@vaadin/select": "24.2.1",
+    "@vaadin/side-nav": "24.2.1",
+    "@vaadin/split-layout": "24.2.1",
+    "@vaadin/tabs": "24.2.1",
+    "@vaadin/tabsheet": "24.2.1",
+    "@vaadin/text-area": "24.2.1",
+    "@vaadin/text-field": "24.2.1",
+    "@vaadin/time-picker": "24.2.1",
+    "@vaadin/tooltip": "24.2.1",
+    "@vaadin/upload": "24.2.1",
     "@vaadin/vaadin-development-mode-detector": "2.0.6",
-    "@vaadin/vaadin-lumo-styles": "24.2.0-alpha7",
-    "@vaadin/vaadin-material-styles": "24.2.0-alpha7",
-    "@vaadin/vaadin-themable-mixin": "24.2.0-alpha7",
+    "@vaadin/vaadin-lumo-styles": "24.2.1",
+    "@vaadin/vaadin-material-styles": "24.2.1",
+    "@vaadin/vaadin-themable-mixin": "24.2.1",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
-    "@vaadin/vertical-layout": "24.2.0-alpha7",
-    "@vaadin/virtual-list": "24.2.0-alpha7",
+    "@vaadin/vertical-layout": "24.2.1",
+    "@vaadin/virtual-list": "24.2.1",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
-    "lit": "2.7.6",
+    "lit": "2.8.0",
     "mobile-drag-drop": "2.3.0-rc.2",
-    "proj4": "2.9.0"
+    "proj4": "2.9.2"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "5.0.2",
     "@rollup/pluginutils": "5.0.2",
-    "@vitejs/plugin-react": "4.0.1",
+    "@vitejs/plugin-react": "4.0.4",
     "async": "3.2.4",
-    "glob": "9.3.5",
+    "glob": "10.3.3",
     "rollup-plugin-brotli": "3.1.0",
     "rollup-plugin-visualizer": "5.9.2",
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
     "typescript": "5.1.6",
-    "vite": "4.4.1",
+    "vite": "4.4.11",
     "vite-plugin-checker": "0.6.1",
     "workbox-build": "7.0.0",
     "workbox-core": "7.0.0",
@@ -177,99 +177,99 @@
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@vaadin/a11y-base": "24.2.0-alpha7",
-      "@vaadin/accordion": "24.2.0-alpha7",
-      "@vaadin/app-layout": "24.2.0-alpha7",
-      "@vaadin/avatar": "24.2.0-alpha7",
-      "@vaadin/avatar-group": "24.2.0-alpha7",
-      "@vaadin/board": "24.2.0-alpha7",
-      "@vaadin/bundles": "24.2.0-alpha7",
-      "@vaadin/button": "24.2.0-alpha7",
-      "@vaadin/charts": "24.2.0-alpha7",
-      "@vaadin/checkbox": "24.2.0-alpha7",
-      "@vaadin/checkbox-group": "24.2.0-alpha7",
-      "@vaadin/combo-box": "24.2.0-alpha7",
+      "@vaadin/a11y-base": "24.2.1",
+      "@vaadin/accordion": "24.2.1",
+      "@vaadin/app-layout": "24.2.1",
+      "@vaadin/avatar": "24.2.1",
+      "@vaadin/avatar-group": "24.2.1",
+      "@vaadin/board": "24.2.1",
+      "@vaadin/bundles": "24.2.1",
+      "@vaadin/button": "24.2.1",
+      "@vaadin/charts": "24.2.1",
+      "@vaadin/checkbox": "24.2.1",
+      "@vaadin/checkbox-group": "24.2.1",
+      "@vaadin/combo-box": "24.2.1",
       "@vaadin/common-frontend": "0.0.18",
-      "@vaadin/component-base": "24.2.0-alpha7",
-      "@vaadin/confirm-dialog": "24.2.0-alpha7",
-      "@vaadin/context-menu": "24.2.0-alpha7",
-      "@vaadin/cookie-consent": "24.2.0-alpha7",
-      "@vaadin/crud": "24.2.0-alpha7",
-      "@vaadin/custom-field": "24.2.0-alpha7",
-      "@vaadin/date-picker": "24.2.0-alpha7",
-      "@vaadin/date-time-picker": "24.2.0-alpha7",
-      "@vaadin/details": "24.2.0-alpha7",
-      "@vaadin/dialog": "24.2.0-alpha7",
-      "@vaadin/email-field": "24.2.0-alpha7",
-      "@vaadin/field-base": "24.2.0-alpha7",
-      "@vaadin/field-highlighter": "24.2.0-alpha7",
-      "@vaadin/form-layout": "24.2.0-alpha7",
-      "@vaadin/grid": "24.2.0-alpha7",
-      "@vaadin/grid-pro": "24.2.0-alpha7",
-      "@vaadin/horizontal-layout": "24.2.0-alpha7",
-      "@vaadin/icon": "24.2.0-alpha7",
-      "@vaadin/icons": "24.2.0-alpha7",
-      "@vaadin/input-container": "24.2.0-alpha7",
-      "@vaadin/integer-field": "24.2.0-alpha7",
-      "@vaadin/item": "24.2.0-alpha7",
-      "@vaadin/list-box": "24.2.0-alpha7",
-      "@vaadin/lit-renderer": "24.2.0-alpha7",
-      "@vaadin/login": "24.2.0-alpha7",
-      "@vaadin/map": "24.2.0-alpha7",
-      "@vaadin/menu-bar": "24.2.0-alpha7",
-      "@vaadin/message-input": "24.2.0-alpha7",
-      "@vaadin/message-list": "24.2.0-alpha7",
-      "@vaadin/multi-select-combo-box": "24.2.0-alpha7",
-      "@vaadin/notification": "24.2.0-alpha7",
-      "@vaadin/number-field": "24.2.0-alpha7",
-      "@vaadin/overlay": "24.2.0-alpha7",
-      "@vaadin/password-field": "24.2.0-alpha7",
-      "@vaadin/polymer-legacy-adapter": "24.2.0-alpha7",
-      "@vaadin/progress-bar": "24.2.0-alpha7",
-      "@vaadin/radio-group": "24.2.0-alpha7",
-      "@vaadin/rich-text-editor": "24.2.0-alpha7",
+      "@vaadin/component-base": "24.2.1",
+      "@vaadin/confirm-dialog": "24.2.1",
+      "@vaadin/context-menu": "24.2.1",
+      "@vaadin/cookie-consent": "24.2.1",
+      "@vaadin/crud": "24.2.1",
+      "@vaadin/custom-field": "24.2.1",
+      "@vaadin/date-picker": "24.2.1",
+      "@vaadin/date-time-picker": "24.2.1",
+      "@vaadin/details": "24.2.1",
+      "@vaadin/dialog": "24.2.1",
+      "@vaadin/email-field": "24.2.1",
+      "@vaadin/field-base": "24.2.1",
+      "@vaadin/field-highlighter": "24.2.1",
+      "@vaadin/form-layout": "24.2.1",
+      "@vaadin/grid": "24.2.1",
+      "@vaadin/grid-pro": "24.2.1",
+      "@vaadin/horizontal-layout": "24.2.1",
+      "@vaadin/icon": "24.2.1",
+      "@vaadin/icons": "24.2.1",
+      "@vaadin/input-container": "24.2.1",
+      "@vaadin/integer-field": "24.2.1",
+      "@vaadin/item": "24.2.1",
+      "@vaadin/list-box": "24.2.1",
+      "@vaadin/lit-renderer": "24.2.1",
+      "@vaadin/login": "24.2.1",
+      "@vaadin/map": "24.2.1",
+      "@vaadin/menu-bar": "24.2.1",
+      "@vaadin/message-input": "24.2.1",
+      "@vaadin/message-list": "24.2.1",
+      "@vaadin/multi-select-combo-box": "24.2.1",
+      "@vaadin/notification": "24.2.1",
+      "@vaadin/number-field": "24.2.1",
+      "@vaadin/overlay": "24.2.1",
+      "@vaadin/password-field": "24.2.1",
+      "@vaadin/polymer-legacy-adapter": "24.2.1",
+      "@vaadin/progress-bar": "24.2.1",
+      "@vaadin/radio-group": "24.2.1",
+      "@vaadin/rich-text-editor": "24.2.1",
       "@vaadin/router": "1.7.5",
-      "@vaadin/scroller": "24.2.0-alpha7",
-      "@vaadin/select": "24.2.0-alpha7",
-      "@vaadin/side-nav": "24.2.0-alpha7",
-      "@vaadin/split-layout": "24.2.0-alpha7",
-      "@vaadin/tabs": "24.2.0-alpha7",
-      "@vaadin/tabsheet": "24.2.0-alpha7",
-      "@vaadin/text-area": "24.2.0-alpha7",
-      "@vaadin/text-field": "24.2.0-alpha7",
-      "@vaadin/time-picker": "24.2.0-alpha7",
-      "@vaadin/tooltip": "24.2.0-alpha7",
-      "@vaadin/upload": "24.2.0-alpha7",
+      "@vaadin/scroller": "24.2.1",
+      "@vaadin/select": "24.2.1",
+      "@vaadin/side-nav": "24.2.1",
+      "@vaadin/split-layout": "24.2.1",
+      "@vaadin/tabs": "24.2.1",
+      "@vaadin/tabsheet": "24.2.1",
+      "@vaadin/text-area": "24.2.1",
+      "@vaadin/text-field": "24.2.1",
+      "@vaadin/time-picker": "24.2.1",
+      "@vaadin/tooltip": "24.2.1",
+      "@vaadin/upload": "24.2.1",
       "@vaadin/vaadin-development-mode-detector": "2.0.6",
-      "@vaadin/vaadin-lumo-styles": "24.2.0-alpha7",
-      "@vaadin/vaadin-material-styles": "24.2.0-alpha7",
-      "@vaadin/vaadin-themable-mixin": "24.2.0-alpha7",
+      "@vaadin/vaadin-lumo-styles": "24.2.1",
+      "@vaadin/vaadin-material-styles": "24.2.1",
+      "@vaadin/vaadin-themable-mixin": "24.2.1",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
-      "@vaadin/vertical-layout": "24.2.0-alpha7",
-      "@vaadin/virtual-list": "24.2.0-alpha7",
+      "@vaadin/vertical-layout": "24.2.1",
+      "@vaadin/virtual-list": "24.2.1",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
-      "lit": "2.7.6",
+      "lit": "2.8.0",
       "mobile-drag-drop": "2.3.0-rc.2",
-      "proj4": "2.9.0"
+      "proj4": "2.9.2"
     },
     "devDependencies": {
       "@rollup/plugin-replace": "5.0.2",
       "@rollup/pluginutils": "5.0.2",
-      "@vitejs/plugin-react": "4.0.1",
+      "@vitejs/plugin-react": "4.0.4",
       "async": "3.2.4",
-      "glob": "9.3.5",
+      "glob": "10.3.3",
       "rollup-plugin-brotli": "3.1.0",
       "rollup-plugin-visualizer": "5.9.2",
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
       "typescript": "5.1.6",
-      "vite": "4.4.1",
+      "vite": "4.4.11",
       "vite-plugin-checker": "0.6.1",
       "workbox-build": "7.0.0",
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "5f5178faf4ac3d745a273335256e394c22cf580c8d766769a6de52ecc7285d70"
+    "hash": "24c5f324a8f0c89b5a3dfc4787237e0df6132f871afd17a0a0b85c2ec8e8d40d"
   }
 }
